--- a/LIKE, ORDER BY, GROUP BY.html
+++ b/LIKE, ORDER BY, GROUP BY.html
@@ -1,6 +1,5 @@
-|Command     | Syntax |Description    | Example |
-| ---      | ---       | ---      | ---       |
-|LIKE |SELECT column1, column2, ... FROM table_name WHERE columnN LIKE pattern;  | LIKE operator is used in a WHERE clause to search for a specified pattern in a column.
-Two wildcards often used in conjunction with the LIKE operator are percent sign(%) and underscore sign (_), depending upon the SQL engine being used. | SELECT f_name , l_name FROM employees WHERE address LIKE '%Elgin,IL%';
-This command will output all entries with Elgin,IL in the Address.         |
-| Pipe     | \|        | Pipe     | \|        |
+| Left-Aligned  | Center Aligned  | Right Aligned |
+| :------------ |:---------------:| -----:|
+| col 3 is      | some wordy text | $1600 |
+| col 2 is      | centered        |   $12 |
+| zebra stripes | are neat        |    $1 |
