Update LIKE, ORDER BY, GROUP BY.html

--- a/LIKE, ORDER BY, GROUP BY.html
+++ b/LIKE, ORDER BY, GROUP BY.html
@@ -1,3 +1,6 @@
+<!-- use link https://htmlpreview.github.io/  to view this html file,paste the adress https://htmlpreview.github.io/https://github.com/Aveiro11/SQL-Cheatsheets/edit/master/LIKE%2C%20ORDER%20BY%2C%20GROUP%20BY.html
+and you can see the rendered cheat sheet-->
+
 <html><head></head>
 <body inmaintabuse="1"><h2><span class="header-link octicon octicon-link"></span>SQL Cheat Sheet: Intermediate - LIKE, ORDER BY, GROUP BY</h2><table>
   <tbody><tr>
